Routing step-1 build routes different views

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,1 +1,21 @@
-<p>blog works!</p>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">BLOG</h1>
+        <h3>Posts List</h3>
+        <p class="lead">This is a showcase to use HTTP request and fetch data.</p>
+    </div>
+</div>
+
+<div class="row my-4">
+    <div class="col-4">
+        <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>
+                </div>
+        </div>
+    </div>
+</div>
