--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,14 @@
-<p>footer works!</p>
+<footer class="footer mt-auto p-3 text-muted bg-light">
+    <div class="container-fluid p-3 p-md-5">
+        <ul class="nav ">
+            <li class="nav-item mx-2"><a href="https://twitter.com/mustafahelbawy">Twitter</a></li> | 
+            <li class="nav-item mx-2"><a href="https://github.com/mustafa-elhelbawy">GitHub</a></li> | 
+            <li class="nav-item mx-2"><a href="https://www.linkedin.com/in/melhelbawy/">LinkedIn</a></li>
+        </ul>
+        <p>Designed and built with all the love in the world by <strong>Mustafa El-Helbawy</strong> with the help of 
+            <a href="https://angular.io">Angular Framework </a>,
+            <a href="https://cli.angular.io">Angular CLI</a> &
+            <a href="https://getbootstrap.com">Bootstrap UI Framework</a> 
+        </p>
+    </div>
+</footer>
